fix(dashboard-grid-filter): I fix overflow of the content

--- a/src/app/features/products-grid/products-grid.component.scss
+++ b/src/app/features/products-grid/products-grid.component.scss
@@ -27,5 +27,5 @@ mat-form-field {
 mat-select {
   padding-left: 16px;
   padding-right: 16px;
-  width: -moz-available;
+  width: stretch;
 }
